fix overwrap and change domain name

--- a/frontend/src/app/components/landing-page/landing-page.component.css
+++ b/frontend/src/app/components/landing-page/landing-page.component.css
@@ -33,6 +33,7 @@
   margin: 7% 20% 0% 20%;
   padding: 1% 2% 2% 2%;
   font-size: large;
+  font-family: Helvetica;
 }
 
 .bottom-left-tip-curve {
@@ -63,6 +64,7 @@
   margin: 0% 20%;
   color: white;
   font-weight: bold;
+  font-family: Helvetica;
 }
 
 .tab {
@@ -81,6 +83,7 @@
   padding: 1% 2% 3% 2%;
   font-size: large;
   border-radius: 15px;
+  font-family: Helvetica;
 }
 
 .result {
@@ -91,6 +94,8 @@
 .result-value {
   font-weight: normal;
   display:inline-block;
+  overflow-wrap: break-word;
+  max-width: 80%;
 }
 
 .result-button {
@@ -140,5 +145,9 @@
   .result-container {
     margin: 7% 10% 20% 10%;
     padding: 2% 6% 5% 6%;
+  }
+
+  .result-value {
+    max-width: 100%;
   }
 }
